tests/snapshots/cli__compile_all.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/compile_all.bend
---
@Pair.get = (a ((@Pair.get__C1 (a b)) b))

@Pair.get__C0 = (a (b ((a (b c)) c)))

@Pair.get__C1 = (?((@Pair.get__C0 *) a) a)

@Pair/Pair = (a (b ((@Pair/Pair/tag (a (b c))) c)))

@Pair/Pair/tag = 0

@main = d
  & @Pair.get ~ (($([+] $(a b)) (a b)) (c d))
  & @Pair/Pair ~ (40 (2 c))
