tests/snapshots/cli__compile_all.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/compile_all.hvm
---
@Pair = (a (b ((a (b c)) c)))

@Pair.get = (a ((@Pair.get$C0 (a b)) b))

@Pair.get$C0 = (a (b ((a (b c)) c)))

@main = e
  & @Pair.get ~ ((a (b c)) (d e))
  & $(a $(b c)) ~ #0
  & @Pair ~ (#641 (#33 d))
