tests/snapshots/cli__compile_inline.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/compile_inline.hvm
---
@Era = *

@Num = 42

@RefToRef = *

@main = a
  & * ~ (42 (* a))
