tests/snapshots/cli__compile_no_opts.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/compile_no_opts.bend
---
@main = *
