tests/snapshots/cli__compile_no_opts.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/compile_no_opts.hvm
---
error: invalid value 'no-pre-reduce' for '-O <COMP_OPTS>'
  [possible values: all, no-all, eta, no-eta, prune, no-prune, linearize-matches, linearize-matches-alt, no-linearize-matches, float-combinators, no-float-combinators, merge, no-merge, inline, no-inline, recursive-last, no-recursive-last]

  tip: a similar value exists: 'no-prune'

For more information, try '--help'.
