tests/snapshots/cli__compile_pre_reduce.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/compile_pre_reduce.hvm
---
Warnings:
In definition 'I':
  Definition is unused.

@I = #5
@main = *
