tests/snapshots/cli__compile_strict_loop.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/compile_strict_loop.hvm
---
@A = (((* (a b)) (#1 c)) c)
  & @A ~ (a b)

@List.cons = (a (b ((a (b c)) (* c))))

@List.nil = (* (a a))

@main = c
  & @A ~ (b c)
  & @List.cons ~ (#65 (a b))
  & @List.cons ~ (#65 (@List.nil a))
